_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    color: #fff;
    min-height: 40px;
    background: $brand-color;
    height: 60px;
    // Positioning context for the mobile navigation icon
    position: relative;

    img.brand {
        max-width: 200px;
        margin-bottom: 10px;
        margin-right: 10px;
    }

    a.page-link,
    a.page-link:active,
    a.page-link:focus {
        color: white;
    }

    a.page-link:hover {
        color: #F8F273;
    }

    button.navbar-toggle {
        margin: 0;
        font-size: 1.5em;
    }
}

.site-title {
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 60px;
    letter-spacing: -1px;
    margin-bottom: 0;
    margin-right: 23px;
    float: left;

    &,
    &:visited {
        color: #e29fa0;
    }

    &:hover {
        color: #fff;
        text-decoration: none;
    }
}

.page-link {
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 60px;
    margin-bottom: 0;
    margin-right: 20px;
    float: left;

    &,
    &:visited {
        color: #e29fa0;
    }

    &:hover {
        color: #fff;
        text-decoration: none;
    }
}

.jumbotron {
    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('/assets/img/top-header.png');
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    border-radius: 0;
    min-height: 420px;
    display: flex;
    align-items: center;

    .flex-container {
        flex-direction: column;

        h1 {
            color: white;
            display: block;
            margin: auto;
        }

        .lead {
            color: white;
            margin: 20px auto;
            font-weight: 300;
            max-width: 75%;
            text-align: center;
        }
    }
}

.index-notice {
    margin-bottom: 30px;
}
/**
 * Site footer
 */
.home .site-footer {
    margin-top: -150px;
}

.site-footer {
    color: $text-color-light;
    background-color: #161616;
    padding: 40px 0;
    font-size: 0.9em;
    line-height: 1.3;
    width: 100%;
    margin: 0;

    .icons {
        margin-bottom: 20px;
        text-align: center;

        .icon-container {
            display: inline-block;
            margin: 0 1.125rem;
            min-width: 120px;
            font-size: 1.1em;
            @include media-query($on-palm) {
                display: block;
                width: 100%;
            }

            .icon {
                .footer-icon {
                    max-width: 18px;
                    margin-right: 5px;
                    @include media-query($on-palm) {
                        display: block;
                        margin: 5px auto;
                        width: 20px;
                    }
                }
                @include media-query($on-palm) {
                    text-align: center;
                }
            }
        }
    }

    a {
        color: $text-color-light;
        font-weight: normal;
    }

    a:hover {
        color: #ccc;
    }

    .footer-content {
        display: flex;
        align-items: center;
        flex-shrink: 0;
        justify-content: center;
        max-width: 55rem;
        margin: 0 auto;

        a.logo {
            color: white;
            display: inline-block;
            border-right: 0.0625rem solid #666;
            padding-right: 1.25rem;
            margin-right: 1.25rem;
            margin-top: 0;
            padding-top: 0;
        }

        p {
            text-align: left;
            width: calc(100% - 10.375rem);
        }
    }
}
/* ... */

